--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
+DB_NAME=clinica_medica
+DB_USER=postgres
+DB_PASS=senha
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=clinicdb
-DB_USER=postgres
-DB_PASS=37768712
-PORT=3000
